[package]
name = "yogachain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"

# Cryptography
pqcrypto-kyber = "0.5.0"
pqcrypto-dilithium = "0.5.0"
blake3 = "1.5.0"

# Async runtime & concurrency
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.77"

# AI-Powered Sharding & Consensus
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4"

# Networking (used to interact with the networking repository)
yogachain-networking = { path = "../networking" }

[dev-dependencies]
tokio-test = "0.4"
